deploy: 8562f606fed6f3399f8a28eaba1a97edbcf4a06b

--- a/v2/index.html
+++ b/v2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://maual-legacy.os-js.org/" />
+    <meta http-equiv="refresh" content="0; url=https://manual-legacy.os-js.org/" />
   </head>
   <body>
     Redirecting...
